--- a/wercker.yml
+++ b/wercker.yml
@@ -12,3 +12,16 @@ build:
     - script:
         name: maven build
         code: mvn clean assembly:assembly
+#Push the docker image with our built and tested application to Docker Hub
+push-release:
+  steps:
+    - internal/docker-push:
+        username: $username
+        password: $password
+        repository: $repository
+        registry: $registry
+        tag: $tag
+        working-dir: /pipeline/source
+        ports: $PORT
+        env: PORT=$PORT
+        cmd: sh target/bin/start
